--- a/src/components/UI/AppUI.css
+++ b/src/components/UI/AppUI.css
@@ -1,17 +1,18 @@
 .main-content {
-  width: 60vw;
-  height: 95vh;
-  background-color: rgb(70, 70, 70);
-  border-radius: 10px;
   display: flex;
   flex-direction: column;
-  transition: all 1s;
+  justify-content: space-around;
+  align-items: center;
+  width: 60vw;
+  height: 90vh;
+  background-color: transparent;
+  border-radius: 10px;
 }
 
 .header-content {
   width: 100%;
   max-width: 100%;
-  height: 25%;
+  height: 20%;
   display: flex;
   transition: all 1s;
 }
@@ -19,27 +20,33 @@
 .board-content {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  align-items: center;
+  height: 75%;
   width: 99%;
   margin: 5px;
   overflow-y: auto;
-  align-items: center;
 }
 
 .board-content ul {
-  width: 80%;
-  height: 100%;
+  min-height: 30%;
+  max-height: 97%;
+  width: 100%;
+  overflow-x: hidden;
+  background-image: linear-gradient(to right, rgb(82, 82, 82), rgb(68, 68, 68), rgb(65, 65, 65));
+  border-radius: 10px;
 }
 
 @media (max-width: 1200px) {
   .main-content {
-    height: 99vh;
+    height: 100vh;
     width: 99vw;
-    transition: all 1s;
   }
   .header-content {
-    height: 40vh;
-    transition: all 1s;
+    height: 20vh;
+  }
+  .board-content ul {
+    min-height: 30%;
+    max-height: 100%;
   }
 }
 
