--- a/src/components/UserRegister/UserBoard.css
+++ b/src/components/UserRegister/UserBoard.css
@@ -8,24 +8,18 @@
 
 .userboard-content {
   display: flex;
-  width: 100%;
-  height: 20%;
-  background-image: linear-gradient(
-    to right,
-    rgb(26, 24, 44),
-    rgb(20, 18, 33),
-    rgb(12, 11, 21),
-    rgb(8, 8, 14)
-  );
-  margin: 2px;
+  max-height: 60px;
+  width: 90%;
+  max-width: 98%;
+  margin: 2%;
+  border: solid 2px black;
   list-style: none;
 }
 
 .labels-box {
   display: flex;
   flex-wrap: wrap;
-  height: 100%;
-  width: 90%;
+  width: 100%;
   word-wrap: break-word;
   box-sizing: border-box;
 }
@@ -53,21 +47,15 @@
   width: 100%;
   height: 100%;
   word-wrap: break-word;
-  transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  -ms-transition: all 0.5s;
 }
 
 @media (max-width: 1200px) {
   .userboard-content {
-    width: 100%;
-    height: 35%;
     flex-wrap: wrap;
+    width: 95%;
+    max-height: 80px;
   }
   .labels-box {
-    width: 80%;
-    height: 100%;
+    width: 100%;
   }
 }
