--- a/src/components/UserRegister/UserEditor.css
+++ b/src/components/UserRegister/UserEditor.css
@@ -7,37 +7,34 @@
 }
 
 .edit-menu {
-  width: 10%;
-  height: 8%;
-  align-self: center;
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(
-    to right,
-    rgb(42, 41, 41),
-    rgb(36, 36, 36),
-    rgb(25, 25, 25),
-    rgb(20, 19, 19)
-  );
+  align-self: flex-start;
+  height: 8%;
+  width: 10%;
+  margin: 10px;
 }
 
 button {
-  width: 100%;
-  height: 100%;
   background-size: cover;
+  background-color: transparent;
   background-position: center center;
-  cursor: pointer;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
   border: none;
+  cursor: pointer;
 }
 
 input {
-  border: none;
+  border: solid 1px transparent;
 }
 
 input:active,
 input:focus {
   box-shadow: 0 0 0 0 none;
-  border: none;
+  outline: 0;
+  border: solid 1px transparent;
 }
 
 .buttons-box div {
@@ -46,43 +43,41 @@ input:focus {
 }
 
 .edit-button {
-  width: 100%;
-  height: 100%;
+  width: 50px;
+  height: 50px;
 }
 
 .edit-button button {
   background-image: url("../images/edit-button-image.png");
-  border: none;
-  cursor: pointer;
+  background-size: 50%;
   background-color: transparent;
-  background-size: 45%;
   background-position: center center;
   background-repeat: no-repeat;
-  filter: invert(100%);
+  border: none;
+  cursor: pointer;
 }
 
 .findUser {
   position: absolute;
   display: none;
-  transform: translate(-100%, 30%);
+  transform: translate(17%, 10%);
   width: 23%;
   max-width: 275px;
 }
 
-.search-button {
-  width: 10%;
+.search-button, .cancel-searching-button  {
+  min-width: 20px;
+  max-width: 10%;
 }
 
 .search-button button {
   background-image: url("../images/search-button-image.png");
-}
-
-.cancel-searching-button {
-  width: 10%;
+  background-color: white;
 }
 
 .cancel-searching-button button {
   background-image: url("../images/close-button-image.png");
+  background-color: white;
 }
 
 .find-input input {
@@ -92,18 +87,14 @@ input:focus {
 .editor-showcase {
   position: absolute;
   display: none;
-  transform: translate(-35%, -102%);
   flex-direction: column;
   align-items: center;
-  width: 20%;
+  transform: translate(0%, -10%);
   height: 35%;
-  background-image: linear-gradient(
-    to right,
-    rgb(42, 41, 41),
-    rgb(36, 36, 36),
-    rgb(25, 25, 25),
-    rgb(20, 19, 19)
-  );
+  width: 20%;
+  background-image: linear-gradient(to right, rgb(82, 82, 82), rgb(68, 68, 68), rgb(65, 65, 65));
+  border: solid 1px black;
+  border-radius: 10px;
 }
 
 .editor-title {
@@ -114,15 +105,15 @@ input:focus {
 
 .editor-showcase label {
   font-size: 1.01em;
-  color: white;
   font-weight: bold;
+  color: black;
 }
 
 .edit-panel-userData {
-  height: 80%;
-  width: 100%;
   display: flex;
   flex-direction: column;
+  height: 80%;
+  width: 100%;
 }
 
 .edit-panel-userData div {
@@ -143,35 +134,34 @@ input:focus {
 .editor-showcase input {
   height: 50%;
   width: 70%;
-  border: none;
-  color: white;
+  color: black;
   margin: 5px;
-  background-image: linear-gradient(
-    to right,
-    rgb(42, 41, 41),
-    rgb(36, 36, 36),
-    rgb(25, 25, 25),
-    rgb(20, 19, 19)
-  );;
+}
+
+.editor-showcase input:hover,
+.editor-showcase input:focus {
+  box-shadow: 0 0 0 0;
+  overflow: hidden;
 }
 
 .clear-and-done-buttons {
   display: flex;
-  align-items: center;
   justify-content: space-evenly;
+  align-items: center;
   height: 15%;
   width: 95%;
 }
 
-.clear-and-done-buttons button{
+.edit-iterative-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 10%;
+  width: 90%;
+}
+
+.edit-iterative-buttons button, .clear-and-done-buttons button {
   width: 10%;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 100%;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  filter: invert(100%);
 }
 
 .clear-button {
@@ -182,31 +172,8 @@ input:focus {
   background-image: url("../images/done-button-image.png");
 }
 
-.edit-iterative-buttons {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 90%;
-  height: 10%;
-}
-
-.edit-iterative-buttons button {
-  width: 10%;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 100%;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  filter: invert(100%);
-}
-
 .delete-button {
   background-image: url("../images/delete-button-image.png");
-}
-
-.delete-button:hover {
-  background-color: rgb(13, 202, 199);
 }
 
 .close-button {
@@ -220,10 +187,11 @@ input:focus {
 
   .findUser {
     height: 4%;
-    transform: translate(-100%, 5%);
+    transform: translate(20%, -15%);
   }
 
-  .search-button, .cancel-searching-button {
+  .search-button,
+  .cancel-searching-button {
     width: 20%;
   }
 
@@ -245,14 +213,15 @@ input:focus {
   .findUser {
     height: 4%;
     width: 50%;
-    transform: translate(-100%, 5%);
+    transform: translate(15%, -15%);
   }
-  
+
   .findUser input {
     height: 100%;
   }
 
-  .search-button, .cancel-searching-button {
+  .search-button,
+  .cancel-searching-button {
     width: 15%;
   }
 
@@ -267,14 +236,15 @@ input:focus {
     width: 65%;
     height: 45%;
   }
-  
+
   .findUser {
     height: 4%;
     width: 38%;
-    transform: translate(-100%, 5%);
+    transform: translate(20%, -15%);
   }
 
-  .search-button, .cancel-searching-button {
+  .search-button,
+  .cancel-searching-button {
     width: 20%;
   }
 
